wp-content/themes/nousdesign/assets/css/ios.css
/* iPads (portrait and landscape) ----------- */
/* And ----------------------------------------*/
/* iPhones (portrait and landscape) ----------- */
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px), only screen and (min-device-width : 320px) and (max-device-width : 480px) {
  #ios-check{
    display: block;
  }

  #mobile-stick{
    position: absolute;
    display: block;
    width: 100%;
    left: 0;
    top: 0;
    z-index: 9999;
  }
  #mobile-wrapper{
    -webkit-overflow-scrolling: touch;
    overflow: auto;
    position: absolute;
    width: 100%;
    height: 100%;
  }
  #mobile-stick .sub-nav{
    display: none;
  }
}

/* iPads (landscape) ----------- */
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
  .navbar .navbar-inner{
    padding-top: 50px;
  }
  #wrapper-margin{
    padding-top: 90px;
  }

  body .projects-container{
    margin-top: -230px;
  }

  body .home-container{
    margin-top: -230px;
  }
}

/* iPads (portrait) ----------- */
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
  .project-carousel-container .carousel-control-prev span{
    left: 10px;
  }
  .project-carousel-container .carousel-control-next span{
    right: 10px;
  }
}

/* iPhones (portrait and landscape) ----------- */
@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
  #mobile-check{
    display: block;
  }

  .mobile-hide{
    display: none;
  }
  .mobile-show{
    display: block;
  }

  #wrapper,
  #wrapper-margin,
  #footer,
  .container-fluid{
    min-width: 320px;
  }

  body{
    font-size: 7px;
  }
  .navbar .navbar-inner{
    padding-top: 50px;
  }
  #wrapper-margin{
    padding-top: 40px;
  }

  .navbar .navbar-inner{
    padding: 0;
    padding-top: 10px;
    padding-bottom: 5px;
    min-height: 0;
  }

  .navbar .nav.pull-right{
    clear: both;
    float: none;
    display: inline-block;
    text-align: center;
    padding-left: 0px;
    padding-right: 0px;
    width: 100%;
  }

  .navbar .nav > li{
    float: none;
    display: inline-block;
    left: 3px;
  }
  .navbar .nav > li.nav-services{
    position: relative;
    left: 0px;
  }
  .navbar .nav > li.nav-projects,
  .navbar .nav > li.nav-contact{
    position: relative;
    left: -2px;
  }

  body {
    min-height: 420px;
  }

  body #wrapper-margin{
    padding-bottom: 0;//25px;
  }

  body #footer{
    height: 25px;
    margin-top: -25px;
  }

  body #footer ul{
    margin: 0;
    float: none;
    top: 5px;
  }

  body #footer .span12{
    min-height: 0;
  }

  #footer ul li{
    margin-right: 8%;
    line-height: 1;
  }







  body .home-container{
    position: absolute;
    top: 50%;
    margin-top: -155px !important;
  }

  .home-carousel,
  .home-carousel-text,
  .home-carousel ul li img,
  .home-carousel-text ul{
    height: 320px;
  }
  .home-carousel-text{
    width: 4000px;
  }

  .home-carousel-text ul{
    width: 1000px;
  }




  .page-nousdesign .content-text,
  .page-services .content-text{
    padding-left: 10px;
    padding-bottom: 10px;
  }
  .page-nousdesign .content-text p:nth-child(1),
  .page-services .content-text p:nth-child(1){
    margin-top: 10px;
  }
  .page-nousdesign .content-text p:nth-child(1) img.alignright,
  .page-services .content-text p:nth-child(1) img.alignright{
    margin-top: 0;
  }




  body .contact-page-height{
    position: absolute;
    top: 50%;
    height: 350px;
    margin-top: -165px !important;
  }

  .page-contact .contact-foreground{
    padding-top: 100px;
  }



  body .projects-container{
    position: absolute;
    top: 50%;
    margin-top: -150px !important;
  }

  .project-carousel, 
  .project-carousel-container, 
  .project-carousel ul li .project-image-container{
    height: 350px;
  }

  .project-carousel ul li .project-image{
    width: 100%;
  }

  .project-carousel ul li img{
    height: 300px;
    width: auto;
  }

  .project-carousel ul li h3{
    position: absolute;
    left: 0;
    top: 305px;
    text-align: center;
    min-width: 0;
    font-size: 1.6em;
  }

  .project-carousel-container .carousel-control{
  }
  
  .project-carousel-container .carousel-control-prev span{
    left: 10px;
  }
  .project-carousel-container .carousel-control-next span{
    right: 10px;
  }



  body .project-carousel ul li .project-image .image-container{
    min-width: 0;
    width: auto;
    background: transparent;
  }
}


/* iPhone5 (portrait) ----------- */
@media (device-height: 568px) and (-webkit-min-device-pixel-ratio: 2) {
  body {
    min-height: 504px;
  }

  body .home-container{
    margin-top: -200px !important;
  }

  .home-carousel,
  .home-carousel-text,
  .home-carousel ul li img,
  .home-carousel-text ul{
    height: 400px;
  }





  body .projects-container{
    position: absolute;
    top: 50%;
    margin-top: -200px !important;
  }

  .project-carousel, 
  .project-carousel-container, 
  .project-carousel ul li .project-image-container{
    height: 420px;
  }

  .project-carousel ul li .project-image{
    width: 100%;
  }

  .project-carousel ul li img{
    height: 400px;
    width: auto;
  }

  .project-carousel ul li h3{
    position: absolute;
    left: 0;
    top: 405px;
    text-align: center;
    min-width: 0;
  }
}

/* iPhones (landscape) ----------- */
@media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation : landscape) {
  body {
    min-height: 270px;
  }

  #wrapper-margin,
  #footer,
  .container-fluid{
    min-width: 480px;
  }

  body .home-container{
    margin-top: -90px !important;
  }

  .home-carousel,
  .home-carousel-text,
  .home-carousel ul li img,
  .home-carousel-text ul{
    height: 200px;
  }



  body .contact-page-height{
    position: absolute;
    top: 50%;
    height: 200px;
    margin-top: -90px !important;
  }

  .page-contact .contact-foreground{
    padding-top: 20px;
  }

  .page-contact .contact-background{
    padding-top: 40px;
  }  




  body .projects-container{
    position: absolute;
    top: 50%;
    margin-top: -90px !important;
  }

  .project-carousel, 
  .project-carousel-container, 
  .project-carousel ul li .project-image-container{
    height: 203px;
  }

  .project-carousel ul li .project-image{
    width: 100%;
  }

  .project-carousel ul li img{
    height: 183px;
    width: auto;
  }

  .project-carousel ul li h3{
    position: absolute;
    left: 0;
    top: 185px;
    text-align: center;
    min-width: 0;
  }

  .project-carousel ul li .project-image{
    width: auto;
  }
}

